--- a/albums/templates/albums/album_form.html
+++ b/albums/templates/albums/album_form.html
@@ -1,7 +1,8 @@
 {% extends 'core/base.html' %}
 {% load i18n %}
+{% load static %}
 
-{% block title %}Your Album{% endblock title %}
+{% block title %}Create Album{% endblock title %}
 
 {% block breadcrumbs %}
   {% include 'partials/breadcrumb_add_album.html' %}
@@ -15,7 +16,7 @@
       <h1>{% trans "Create a new album" %}</h1>
 
       <div class="rounded-lg bg-base-200 p-8 shadow-lg lg:p-12">
-        <form method="post" enctype="multipart/form-data">
+        <form id="addPhotoForm" method="post" enctype="multipart/form-data">
           {% csrf_token %}
           <div class="grid grid-cols-1 gap-4 w-full max-w-xs">
             <div>
@@ -29,8 +30,9 @@
           </div>
           <div class="hidden textarea-bordered"></div> <!-- to add missing tailwind styling-->
           <div class="mt-4">
-              <label for="images" class="text-xl font-bold tracking-tight">{% trans "Upload photos:" %}</label>
-              <input type="file" name="images" multiple class="mt-4 block file-input file-input-bordered w-full max-w-xs" required>
+              <label id="fileInputLabel" for="images" class="text-xl font-bold tracking-tight">{% trans "Upload photos:" %}</label>
+              <input id="fileInput" type="file" name="images" multiple class="mt-4 block file-input file-input-sm file-input-bordered w-full max-w-xs" required>
+              <p id="load_spinner" class="hidden inline-flex align-middle items-center"><span class="loading loading-infinity loading-lg mr-3"></span>{% trans "loading" %}<span class="ml-2 loading loading-dots loading-xs"></span></p>
               <div class="flex gap-4 mt-8">
                 <a href="{% url 'albums:albums_view' %}" class="btn btn-neutral">
                   <svg class="w-6 h-6 stroke-2 fill-current" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg">
@@ -39,7 +41,7 @@
                   </svg>
                   {% trans "Back" %}
                 </a>
-                <button type="submit" class="inline-block btn btn-outline">{% trans "Save" %}</button>
+                <button id="save_btn" type="submit" class="inline-block btn btn-outline">{% trans "Save" %}</button>
               </div>
           </div>
         </form>
@@ -49,3 +51,7 @@
   </div>
 
 {% endblock body %}
+
+{% block javascript %}
+  <script src="{% static 'photos/js/add_photo_spinner.js' %}"></script>
+{% endblock javascript %}
