--- a/accounts/templates/accounts/change_password.html
+++ b/accounts/templates/accounts/change_password.html
@@ -2,6 +2,7 @@
 {% extends 'core/base.html' %}
 {% load i18n %}
 
+{% block title %}Change Password{% endblock title %}
 {% block body %}
 <div class="bg-base-100">
   <div class="mx-auto max-w-screen-xl px-4 py-16 sm:px-6 lg:px-8">
