--- a/static/css/output.css
+++ b/static/css/output.css
@@ -4313,8 +4313,20 @@ details.collapse summary::-webkit-details-marker {
   grid-column: span 2 / span 2;
 }
 
+.col-span-3 {
+  grid-column: span 3 / span 3;
+}
+
 .col-span-6 {
   grid-column: span 6 / span 6;
+}
+
+.col-span-9 {
+  grid-column: span 9 / span 9;
+}
+
+.row-span-2 {
+  grid-row: span 2 / span 2;
 }
 
 .float-right {
@@ -4719,6 +4731,10 @@ details.collapse summary::-webkit-details-marker {
   height: 100vh;
 }
 
+.h-16 {
+  height: 4rem;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
@@ -4784,6 +4800,10 @@ details.collapse summary::-webkit-details-marker {
   width: 100vw;
 }
 
+.w-16 {
+  width: 4rem;
+}
+
 .min-w-0 {
   min-width: 0px;
 }
@@ -4823,6 +4843,14 @@ details.collapse summary::-webkit-details-marker {
 
 .max-w-xs {
   max-width: 20rem;
+}
+
+.max-w-screen-md {
+  max-width: 768px;
+}
+
+.max-w-screen-sm {
+  max-width: 640px;
 }
 
 .flex-1 {
@@ -5031,6 +5059,14 @@ details.collapse summary::-webkit-details-marker {
   gap: 1.5rem;
 }
 
+.gap-8 {
+  gap: 2rem;
+}
+
+.gap-5 {
+  gap: 1.25rem;
+}
+
 .gap-x-16 {
   -moz-column-gap: 4rem;
        column-gap: 4rem;
@@ -5110,8 +5146,24 @@ details.collapse summary::-webkit-details-marker {
   margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
 
+.place-self-start {
+  place-self: start;
+}
+
+.place-self-center {
+  place-self: center;
+}
+
+.self-start {
+  align-self: flex-start;
+}
+
 .self-center {
   align-self: center;
+}
+
+.justify-self-start {
+  justify-self: start;
 }
 
 .overflow-hidden {
@@ -5618,8 +5670,8 @@ details.collapse summary::-webkit-details-marker {
   padding-right: 1.5rem;
 }
 
-.pt-10 {
-  padding-top: 2.5rem;
+.pr-8 {
+  padding-right: 2rem;
 }
 
 .pt-2 {
@@ -5636,10 +5688,6 @@ details.collapse summary::-webkit-details-marker {
 
 .pt-8 {
   padding-top: 2rem;
-}
-
-.pr-8 {
-  padding-right: 2rem;
 }
 
 .text-left {
@@ -6652,6 +6700,10 @@ details.collapse summary::-webkit-details-marker {
     grid-column: span 3 / span 3;
   }
 
+  .sm\:col-span-6 {
+    grid-column: span 6 / span 6;
+  }
+
   .sm\:mx-1 {
     margin-left: 0.25rem;
     margin-right: 0.25rem;
@@ -6669,6 +6721,10 @@ details.collapse summary::-webkit-details-marker {
     margin-bottom: 4rem;
   }
 
+  .sm\:ml-0 {
+    margin-left: 0px;
+  }
+
   .sm\:mt-0 {
     margin-top: 0px;
   }
@@ -6679,10 +6735,6 @@ details.collapse summary::-webkit-details-marker {
 
   .sm\:mt-3 {
     margin-top: 0.75rem;
-  }
-
-  .sm\:ml-0 {
-    margin-left: 0px;
   }
 
   .sm\:block {
@@ -6777,20 +6829,16 @@ details.collapse summary::-webkit-details-marker {
     justify-content: flex-end;
   }
 
+  .sm\:gap-2 {
+    gap: 0.5rem;
+  }
+
   .sm\:gap-3 {
     gap: 0.75rem;
   }
 
   .sm\:gap-4 {
     gap: 1rem;
-  }
-
-  .sm\:gap-2 {
-    gap: 0.5rem;
-  }
-
-  .sm\:gap-1 {
-    gap: 0.25rem;
   }
 
   .sm\:gap-x-6 {
@@ -6888,20 +6936,16 @@ details.collapse summary::-webkit-details-marker {
     grid-column: span 2 / span 2;
   }
 
-  .md\:col-start-1 {
-    grid-column-start: 1;
+  .md\:col-span-6 {
+    grid-column: span 6 / span 6;
   }
 
-  .md\:col-start-2 {
-    grid-column-start: 2;
+  .md\:col-span-5 {
+    grid-column: span 5 / span 5;
   }
 
-  .md\:col-end-3 {
-    grid-column-end: 3;
-  }
-
-  .md\:col-end-4 {
-    grid-column-end: 4;
+  .md\:col-span-7 {
+    grid-column: span 7 / span 7;
   }
 
   .md\:h-6 {
@@ -7123,6 +7167,11 @@ details.collapse summary::-webkit-details-marker {
     padding-bottom: 3rem;
   }
 
+  .lg\:py-14 {
+    padding-top: 3.5rem;
+    padding-bottom: 3.5rem;
+  }
+
   .lg\:py-2 {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
@@ -7138,21 +7187,12 @@ details.collapse summary::-webkit-details-marker {
     padding-bottom: 1.5rem;
   }
 
-  .lg\:py-14 {
-    padding-top: 3.5rem;
-    padding-bottom: 3.5rem;
-  }
-
   .lg\:pb-8 {
     padding-bottom: 2rem;
   }
 
   .lg\:pt-12 {
     padding-top: 3rem;
-  }
-
-  .lg\:pt-28 {
-    padding-top: 7rem;
   }
 
   .lg\:pt-4 {
