--- a/photos/templates/photos/photo_edit.html
+++ b/photos/templates/photos/photo_edit.html
@@ -103,9 +103,11 @@
         </div>
 
         {% if request.user != photo.album.creator and users_with_album_access %}
+        <!-- photo settings of a shared album (from the uploader pov) -->
           {% include 'partials/photoaccess_relations.html' with related_users_to_show=users_with_album_access %}
         {% else %}
           {% if related_users %}
+          <!-- photo settings from the album creator pov -->
             {% include 'partials/photoaccess_relations.html' with related_users_to_show=related_users %}
          {% endif %}
         {% endif %}
