--- a/photos/templates/partials/breadcrumb_add_photos.html
+++ b/photos/templates/partials/breadcrumb_add_photos.html
@@ -3,12 +3,13 @@
 
 {% block subcrumb %}
 <li>
-  <div class="flex items-center">
+  <div class="flex items-center group">
     <!-- Heroicon name: mini/chevron-right -->
     <svg class="h-5 w-5 flex-shrink-0 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
       <path fill-rule="evenodd" d="M7.21 14.77a.75.75 0 01.02-1.06L11.168 10 7.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z" clip-rule="evenodd" />
     </svg>
-    <a href="{% url 'photos:add_photos_to_album' album.id %}" class="ml-2 lg:ml-4 text-sm font-medium text-gray-500 hover:text-gray-700">{% trans "Add photos" %}</a>
+    <svg class="w-5 h-5 stroke-gray-500 group-hover:stroke-gray-700" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M13 4H8.8C7.11984 4 6.27976 4 5.63803 4.32698C5.07354 4.6146 4.6146 5.07354 4.32698 5.63803C4 6.27976 4 7.11984 4 8.8V15.2C4 16.8802 4 17.7202 4.32698 18.362C4.6146 18.9265 5.07354 19.3854 5.63803 19.673C6.27976 20 7.11984 20 8.8 20H15.2C16.8802 20 17.7202 20 18.362 19.673C18.9265 19.3854 19.3854 18.9265 19.673 18.362C20 17.7202 20 16.8802 20 15.2V11" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> <path d="M4 16L8.29289 11.7071C8.68342 11.3166 9.31658 11.3166 9.70711 11.7071L13 15M13 15L15.7929 12.2071C16.1834 11.8166 16.8166 11.8166 17.2071 12.2071L20 15M13 15L15.25 17.25" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> <path d="M18.5 3V5.5M18.5 8V5.5M18.5 5.5H16M18.5 5.5H21" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>
+    <a href="{% url 'photos:add_photos_to_album' album.id %}" class="ml-2 lg:ml-4 text-sm font-medium text-gray-500 group-hover:text-gray-700">{% trans "Add photos" %}</a>
   </div>
 </li>
 {% endblock subcrumb %}
