--- a/photos/templates/photos/photo_detail.html
+++ b/photos/templates/photos/photo_detail.html
@@ -12,6 +12,21 @@
 
 {% block body %}
 <div class="mx-auto max-w-2xl px-4 py-10 sm:px-6 sm:py-16 lg:max-w-4xl lg:px-8">
+
+  <!-- messages -->
+  {% if messages %}
+    {% for message in messages %}
+    <div class="alert alert-{{message.tags}} mb-6">
+    {% if message.tags == 'success' %}
+      <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current shrink-0 h-6 w-6" fill="none"viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
+    {% elif message.tags == 'error' %}
+     <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
+    {% endif %}
+      <span>{{message}}</span>
+    </div>
+    {% endfor %}
+  {% endif %}
+
   <!-- Detailed Photo -->
   <div class="block">
     <div class="relative mx-auto w-full group">
