--- a/core/templates/partials/navbar.html
+++ b/core/templates/partials/navbar.html
@@ -2,7 +2,7 @@
 {% load mathfilters %}
 {% load i18n %}
 
-<div class="hidden text-emerald-500"></div>
+{# <div class="hidden text-emerald-500"></div> #}
 
 <div class="navbar bg-base-100 shadow-md">
   <div class="flex-1">
