--- a/albums/templates/albums/album_access.html
+++ b/albums/templates/albums/album_access.html
@@ -7,7 +7,7 @@
 {% load i18n %}
 
 {% block  breadcrumbs %}
-  {% include 'partials/breadcrumb_settings.html' %}
+  {% include 'partials/breadcrumb_album_settings.html' %}
 {% endblock breadcrumbs %}
 
 {% block body %}
@@ -144,8 +144,8 @@
                                 </div>
                               </div>
                               <div>
-                                <div class="font-bold">{% firstof relation.get_full_name relation.email %}</div>
-                                <p class="text-sm opacity-50 text-ellipsis">{{relation.email|truncatechars:10}}</p>
+                                <div class="font-bold truncate-text">{% firstof relation.get_full_name relation.email %}</div>
+                                <p class="text-sm opacity-50 truncate-text">{{relation.email}}</p>
                               </div>
                             </div>
                           </a>
