--- a/albums/templates/partials/breadcrumb_home.html
+++ b/albums/templates/partials/breadcrumb_home.html
@@ -1,10 +1,10 @@
 <nav class="flex {% block addclass %}{% endblock %}" aria-label="Breadcrumb">
   <ol role="list" class="flex items-center space-x-2 lg:space-x-4">
     <li>
-      <div>
-        <a href="{% url 'albums:albums_view' %}" class="text-gray-400 hover:text-gray-500">
+      <div class="group">
+        <a href="{% url 'albums:albums_view' %}" class="text-gray-400 hover-group:text-gray-500">
           <!-- Heroicon name: mini/home -->
-          <svg class="h-5 w-5 flex-shrink-0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+          <svg class="h-5 w-5 flex-shrink-0 fill-gray-400 hover-group:fill-gray-700" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
             <path fill-rule="evenodd" d="M9.293 2.293a1 1 0 011.414 0l7 7A1 1 0 0117 11h-1v6a1 1 0 01-1 1h-2a1 1 0 01-1-1v-3a1 1 0 00-1-1H9a1 1 0 00-1 1v3a1 1 0 01-1 1H5a1 1 0 01-1-1v-6H3a1 1 0 01-.707-1.707l7-7z" clip-rule="evenodd" />
           </svg>
           <span class="sr-only">Home</span>
