--- a/photos/templates/photos/photo_detail.html
+++ b/photos/templates/photos/photo_detail.html
@@ -16,7 +16,8 @@
   <!-- messages -->
   {% if messages %}
     {% for message in messages %}
-    <div class="alert alert-{{message.tags}} mb-6">
+    <div role="alert" class="alert alert-{{message.tags}} mb-6">
+      {# <p class="aler alert-warning"></p> #}
     {% if message.tags == 'success' %}
       <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current shrink-0 h-6 w-6" fill="none"viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
     {% elif message.tags == 'error' %}
