added hidden blur-sm class to be caught by tw-watch

--- a/accounts/templates/partials/modal_request_confirmation.html
+++ b/accounts/templates/partials/modal_request_confirmation.html
@@ -1,6 +1,8 @@
 {% load i18n %}
 {% load get_full_name %}
 
+{# <p class="blur-sm"></p> #}
+
 <div x-data="{ modalOpen: false }"
       @keydown.escape.window="modalOpen = false"
       :class="{ 'z-40': modalOpen }" class="relative w-auto h-auto">
