added password validation with messages to display

--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -134,7 +134,7 @@
 
         {% if messages %}
           {% for message in messages %}
-              <div role="alert" class="alert alert-{{message.tags}}">
+              <div role="alert" class="mt-8 mb-6 alert alert-{{message.tags}}">
                 {% if message.tags == "success" %}
                   <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
                 {% elif message.tags == "error" %}
@@ -143,6 +143,12 @@
                 <span>{{message}}</span>
               </div>
           {% endfor %}
+        {% endif %}
+
+        {% if form.errors %}
+          <div class="alert alert-error">
+              {{ form.errors }}
+          </div>
         {% endif %}
 
       </div>
