--- a/albums/templates/albums/album_form.html
+++ b/albums/templates/albums/album_form.html
@@ -31,7 +31,9 @@
           <div class="hidden textarea-bordered"></div> <!-- to add missing tailwind styling-->
           <div class="mt-4">
               <label id="fileInputLabel" for="images" class="text-xl font-bold tracking-tight">{% trans "Upload photos:" %}</label>
-              <input id="fileInput" type="file" name="images/*" accept="images" multiple class="mt-4 block file-input file-input-sm file-input-bordered w-full max-w-xs" required>
+
+              <input id="fileInput" type="file" name="images" accept="image/*" multiple class="mt-4 block file-input file-input-sm file-input-bordered w-full max-w-xs" required>
+
               <p id="load_spinner" class="hidden inline-flex align-middle items-center"><span class="loading loading-infinity loading-lg mr-3"></span>{% trans "loading" %}<span class="ml-2 loading loading-dots loading-xs"></span></p>
               <div class="flex gap-4 mt-8">
                 <a href="{% url 'albums:albums_view' %}" class="btn btn-neutral">
