--- a/albums/templates/albums/albums.html
+++ b/albums/templates/albums/albums.html
@@ -15,16 +15,22 @@
   <div class="mx-auto max-w-2xl px-6 py-10 sm:px-8 sm:py-16 sm:pb-16 lg:max-w-7xl lg:px-8">
 
     {% if messages %}
-    {% for message in messages %}
-    <div class="my-6 alert alert-{{message.tags}} mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
-      {% if message.tags == "success" %}
-      <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
-      {% elif message.tags == "error" %}
-      <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
-      {% endif %}
-      <span>{{message}}</span>
-    </div>
-    {% endfor %}
+      {% for message in messages %}
+      <div class="my-6 alert alert-{{message.tags}} mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
+        {% if message.tags == "success" %}
+        <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
+        {% elif message.tags == "error" %}
+        <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
+        {% endif %}
+        <span>{{message}}</span>
+      </div>
+      {% endfor %}
+    {% endif %}
+
+    {% if form.errors %}
+      <div class="alert alert-error">
+        {{ form.errors }}
+      </div>
     {% endif %}
 
     <div class="flex flex-col w-full xl:flex-row justify-between">
