put bg image from url to static

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -5,7 +5,7 @@
 {% block title %}{% trans "Welcome" %}{% endblock %}
 
 {% block body %}
-<div class="hero min-h-screen -mt-8 sm:-mt-10" style="background-image: url(https://images.unsplash.com/photo-1528569937393-ee892b976859?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80);">
+<div class="hero min-h-screen -mt-8 sm:-mt-10" style="background-image: url(../../../static/images/index_bg_image.avif);">
   <div class="hero-overlay bg-opacity-60"></div>
   <div class="hero-content text-neutral-content">
     <div class="max-w-lg">
