album creation base command for demo users

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -18,7 +18,7 @@
       </p>
       <div class=" flex place-content-center gap-x-4">
         <a href="{% url 'accounts:login' %}" class="btn btn-accent">{% trans "Get Started &nbsp;🎉" %}</a>
-        <a href="" class="btn btn-primary">{% trans "Get a Demo &nbsp;🔎" %}</a>
+        <a href="{% url 'core:get_a_demo' %}" class="btn btn-primary">{% trans "Get a Demo &nbsp;🔎" %}</a>
       </div>
     </div>
   </div>
